--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -64,6 +64,10 @@
   text-decoration: underline;
 }
 
+.activeLink {
+  color: #397bd1;
+  text-decoration: none;
+}
 .message {
   text-align: center;
   font-size: 1.2rem;
